--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.yu.chatui.MainActivity">
@@ -9,7 +10,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/id_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_weight="1"
+        android:layout_height="0dp"></android.support.v7.widget.RecyclerView>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,4 +34,4 @@
             android:layout_weight="1"
             android:text="@string/send" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
